--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de IMC</title>
-    <link rel="stylesheet" href="/Imc-calculator/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet" />
-    <script src="/Imc-calculator/script/script.js" defer></script>
+    <script src="/script/script.js" defer></script>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
         <div id="calc-container">
             <h2>Calculadora de IMC</h2>
             <form id="imc-form">
+                <div class="form-inputs">
                 <div class="form-control">
                     <label for="name">Insira seu nome:</label>
                     <input type="text" name="name" id="name" placeholder="Exemplo Victor" required />
@@ -28,7 +29,6 @@
                     <label for="age">Digite sua idade:</label>
                     <input type="text" name="age" id="age" placeholder="Exemplo 27" required />
                 </div>
-                <div class="form-inputs">
                     <div class="form-control">
                         <label for="height">Altura:</label>
                         <input type="text" name="height" id="height" placeholder="Exemplo 1,75" required />
@@ -47,8 +47,8 @@
         <div id="result-container" class="hide">
             <div id="imc-table">
                 <div class="table-header">
-                    <p id="name-info">Olá,<span></span></p>
-                    <p id="age-info">sua idade atual é <span></span>anos</p>
+                    <p id="name-info">Olá, <span></span></p>
+                    <p id="age-info">sua idade atual é <span></span> anos</p>
                     <p id="imc-number">Seu IMC: <span></span></p>
                     <p id="imc-info">Situação atual: <span></span></p>
                 </div>
