--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
     <footer>
         <p>2023 © Desenvolvido por Victor Almeida</p>
+        <!--projeto de código aberto no github , da um fork lá :) -->
     </footer>
 </body>
 
